# etebase-csharp

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: manual.yml
dotnet_tests/: Test.cs  dotnet.csproj
src/: glue.rs.in
