[package]
name = "etebase-csharp"
description = "C# bindings to etebase-rs"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etesync-rs/tree/etebase/python/"
version = "0.1.0"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "etebase_csharp_native"
crate-type = ["cdylib"]

[build-dependencies]
rust_swig = { git = "https://github.com/tasn/flapigen-rs", rev = "e35c69a83895ef5ff7a2f980637ecf0f5c0bf943" }
env_logger = "^0.7"
log = "^0.4.6"

[dependencies]
openssl = { version = "0.10.30", features = ["vendored"] }
etebase = { git = "https://github.com/etesync/etebase-rs", rev = "a56a3bac2c056b957cbb5d81e1f70815da66bd9a" }
